--- a/3_product_landing_page/style.css
+++ b/3_product_landing_page/style.css
@@ -80,7 +80,7 @@ section {
 }
 
 h1 {
-    margin-bottom: 1rem;
+    margin: 1rem 0rem;
     color: var(--primary-color);
     font-size: 3.5rem;
 }
@@ -102,7 +102,7 @@ a {
 }
 form {
     display: flex;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 }
 #email {
     font-size: 1.2rem;
@@ -280,6 +280,7 @@ footer {
         margin: auto 3vw;
         width: 94vw;
         font-size: 1rem;
+        padding: 1rem;
     }
     #features {
         height: auto;
@@ -289,7 +290,6 @@ footer {
         font-size: 1.2rem;
     }
     h1 {
-        margin-top: 2rem;
         margin-bottom: 1rem;
         color: var(--primary-color);
         font-size: 2.5rem;
