--- a/3_product_landing_page/style.css
+++ b/3_product_landing_page/style.css
@@ -213,6 +213,21 @@ footer {
 }
 
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: var(--background-color);
+}
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: var(--secondary-color);
+}
+
+
+
 @media (max-width: 1110px) {
     
     .overview-text {
