changed nav color

--- a/4_documentation/style.css
+++ b/4_documentation/style.css
@@ -1,6 +1,6 @@
 :root {
     /* --primary-color: #14a76c; */
-    --primary-color: #275e92;
+    --primary-color: #24588a;
     --heading: #4da9ff;
     --code-bg: #202020;
     --back-ground: #343434;
