--- a/4_documentation/style.css
+++ b/4_documentation/style.css
@@ -1,6 +1,6 @@
 :root {
     /* --primary-color: #14a76c; */
-    --primary-color: #24588a;
+    --primary-color: #295b8a;
     --heading: #4da9ff;
     --code-bg: #202020;
     --back-ground: #343434;
@@ -33,15 +33,24 @@ body {
     margin: 0;
     padding: 0;
     width: 320px;
-    min-height: 100%;
+    height: 100%;
     background-color: var(--primary-color);
+    overflow-y: hidden;
+}
+#navbar:hover , #navbar:focus{
+    overflow-y: scroll;
+}
+#navbar::-webkit-scrollbar {
+    width: 0;
 }
 #main-doc {
     background-color: var(--back-ground);
     position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 0;
     left: 320px;
-    padding: 1rem 3rem;
+    padding: 1rem 10vw;
     line-height: 1.5rem;
 }
 #navbar ul {
@@ -63,8 +72,10 @@ body {
     padding: 0.4rem 30px;
     width: 100%;
 }
-#navbar ul li:hover {
-    background-color: #0c345a;
+#navbar ul li a:hover {
+    /* background-color: #163e64; */
+    background-color: white;
+    color: var(--code-bg);
 }
 h1 {
     padding: 2vh 0;
@@ -92,15 +103,40 @@ p {
     padding: 0.4rem 0;
 }
 pre {
+    margin: 0.5rem;
     font-family: monospace;
     background-color: var(--code-bg);
     padding: 0.5rem 1rem;
 }
-
-
-@media (max-width: 1024px){
-    #navbar {
-        display: none;
-    }
+section {
+    padding-bottom: 1rem;
+    border-bottom: 2px solid rgb(153, 153, 153);
 }
 
+@media (max-width: 1200px){
+    #main-doc {
+        left: 300px;
+        padding: 1rem 5vw;
+    }
+    #navbar {
+        width: 300px;
+    }
+}
+@media (max-width: 1080px){
+    #main-doc {
+        padding: 1rem 2vw;
+    }
+}
+@media (max-width: 1000px) {
+    #navbar {
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        position: relative;
+        margin: 0;
+        padding: 0;
+        width: auto;
+        min-height: 100%;
+        background-color: var(--primary-color);
+    }
+}
