--- a/4_documentation/style.css
+++ b/4_documentation/style.css
@@ -87,6 +87,7 @@ h3 {
     font-size: 1.45rem;
     padding: 0.6rem 0;
     font-weight: bold;
+    line-height: 1.5rem;
 }
 #main-doc section header {
     margin-top: 1.5rem;
@@ -107,13 +108,14 @@ pre {
     font-family: monospace;
     background-color: var(--code-bg);
     padding: 0.5rem 1rem;
+    white-space: prewarap;
 }
 section {
     padding-bottom: 1rem;
     border-bottom: 2px solid rgb(153, 153, 153);
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1210px){
     #main-doc {
         left: 300px;
         padding: 1rem 5vw;
@@ -128,6 +130,10 @@ section {
     }
 }
 @media (max-width: 1000px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
     #navbar {
         display: flex;
         text-align: center;
@@ -136,7 +142,13 @@ section {
         margin: 0;
         padding: 0;
         width: auto;
-        min-height: 100%;
+        height: 30vh;
         background-color: var(--primary-color);
+    }
+    #main-doc {
+        position: relative;
+        top: auto;
+        left: auto;
+        padding: 1rem 3vw;
     }
 }
