--- a/4_documentation/style.css
+++ b/4_documentation/style.css
@@ -27,6 +27,7 @@
 body {
     font-family: sans-serif;
     color: white;
+    /* overflow-x: hidden; */
 }
 
 #navbar {
@@ -95,7 +96,7 @@ body {
 }
 
 img {
-    width: 20%;
+    width: 60px;
     height: auto;
 }
 
@@ -134,6 +135,7 @@ a {
 
 p {
     padding: 0.4rem 0;
+    word-wrap: break-word;
 }
 
 pre {
@@ -142,6 +144,8 @@ pre {
     background-color: var(--code-bg);
     padding: 0.5rem 1rem;
     white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-x: hidden;
 }
 
 section {
